# taobao_cwl

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/app/: crwl.py  decorators.py  processes.py  test.py
src/app/models/: crwl_model.py  sheet_models.py
src/app/shared/: consts.py  exceptions.py
src/app/utils/: browser.py  gsheet.py  io_utils.py  logger.py  paths.py
