[project]
name = "taobao-cwl"
version = "0.1.0"
description = "Taobao crawler"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.3",
    "gspread>=6.1.4",
    "seleniumbase>=4.33.11",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/app/main.py"
test = "python src/app/test.py"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
